# noteit

./: .env  .env.example  Cargo.toml  README.md  docker-compose.yaml
apps/noteit-backend/: Cargo.toml
apps/noteit-backend/src/: config.rs  main.rs
apps/noteit-frontend/: Cargo.toml  Dioxus.toml
apps/noteit-frontend/src/: main.rs
noteit-frontend/src/: main.rs
