[package]
name = "noteit-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { workspace = true, features = ["derive"] }
dotenv = { workspace = true }
envy = { workspace = true }
getset = { workspace = true }
serde_with = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true, features = ["full"] }
